test/functions/vass/proc-iter/error-yield-in-proc-2.chpl
iter i11i() {
  proc prc() {
    yield 1;
  }
  yield prc();
}
for i in i11i() do write(i);
